# DataNavalia

./: README.md
Encrypt_File/: CMakeLists.txt  README.md  main.cpp
List_Duplicates/: CMakeLists.txt  README.md  main.cpp
List_Files/: CMakeLists.txt  README.md  main.cpp
Search_Files/: CMakeLists.txt  README.md  main.cpp
